--- a/style.css
+++ b/style.css
@@ -591,7 +591,7 @@ a img {
 .blog .post-content,
 .archive .post-content,
 .search .post-content {
-  padding-bottom: 0.375em;
+  padding-bottom: 1.5em;
 }
 
 .sticky-status span {
@@ -614,11 +614,6 @@ a img {
   .archive .entry,
   .search .entry {
     margin-top: 3em;
-  }
-  .blog .post-content,
-  .archive .post-content,
-  .search .post-content {
-    padding-bottom: 1.5em;
   }
 }
 .comments-number {
